--- a/style.css
+++ b/style.css
@@ -1,7 +1,24 @@
-/* .CONTAINER {
-    padding-left: 10%;
-    padding-right: 30%;
-} */
+/* Built-In */
+body {
+    background-color: #f5f5f5;
+    margin: 0;
+    color: #3c3c3c;
+}
+
+a {
+    color: #ff5a5f;
+}
+
+/* Layout */
+.CONTAINER {
+    margin-left: 10%;
+    margin-right: 10%;
+    padding-left: 5%;
+    padding-right: 5%;
+    padding-top: 1%;
+    background-color: white;
+}
+
 
 /* Items */
 .NAME {
@@ -10,18 +27,30 @@
 }
 
 .INDEX_ITEM {
-    color: #000000;
+    color: #3c3c3c;
     font-weight: bold;
 }
 
 .AVATAR {
     border-radius: 50%;
-    border: 1px solid #000000;
+    border: 1px solid #3c3c3c;
 }
 
 .SECTION-HEADER {
     font-weight: bold;
     font-size: large;
+    position: relative;
+    text-indent: 1em;
+}
+
+.SECTION-HEADER::before {
+    content: "";
+    display: block;
+    float: left;
+    width: 0.5%;
+    background-color: #ff5a5f;
+    position: absolute;
+    height: 100%;
 }
 
 /* FONT Related CSS */
@@ -43,6 +72,10 @@
 
 .FONT-TIMES-NEW-ROMAN {
     font-family: Georgia, "Times New Roman", Times, serif
+}
+
+.FONT-ARIAL {
+    font-family: Arial, Helvetica, sans-serif
 }
 
 .FONT-SONG {
