--- a/style.css
+++ b/style.css
@@ -3,31 +3,57 @@ body {
     background-color: #f5f5f5;
     margin: 0;
     color: #3c3c3c;
+    font-size: 1rem;
+    display: flex;
+    justify-content: center;
 }
 
 a {
-    color: #ff5a5f;
+    color: #00a6fb;
 }
 
 /* Layout */
 .CONTAINER {
-    margin-left: 10%;
-    margin-right: 10%;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 1%;
     background-color: white;
+    display: flex;
+    flex-direction: column;
+    width: 1024px;
 }
 
+.FLEX-LAYOUT-VERTICAL {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+}
+
+.FLEX-LAYOUT-HORIZONTAL {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.FLEX-SPACE-BETWEEN {
+    justify-content: space-between;
+}
+
+.FLEX-SPACE-AROUND {
+    justify-content: space-around;
+}
+
+.FLEX-CENTER {
+    justify-content: center;
+}
+
+.FLEX-ITEM {
+    flex: 1;
+}
 
 /* Items */
 .NAME {
-    font-size: 36px;
-    font-weight: bold;
-}
-
-.INDEX_ITEM {
-    color: #3c3c3c;
+    font-size: 2rem;
     font-weight: bold;
 }
 
@@ -36,32 +62,36 @@ a {
     border: 1px solid #3c3c3c;
 }
 
+.AVATAR-CONTAINER {
+    width: 336px;
+}
+
+.DIVIDER {
+    border-bottom: 1px solid #3c3c3c;
+    margin-top: 1%;
+    margin-bottom: 1%;
+}
+
 .SECTION-HEADER {
     font-weight: bold;
     font-size: large;
     position: relative;
-    text-indent: 1em;
+    text-indent: 1rem;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
 .SECTION-HEADER::before {
     content: "";
     display: block;
     float: left;
-    width: 0.5%;
-    background-color: #ff5a5f;
+    width: 0.5rem;
+    background-color: #00a6fb;
     position: absolute;
     height: 100%;
 }
 
 /* FONT Related CSS */
-.FONT36 {
-    font-size: 36px
-}
-
-.FONT18 {
-    font-size: 18px
-}
-
 .FONT-BOLD {
     font-weight: bold
 }
